stage2_training.log
  File "<stdin>", line 4
    stage1_model =
                  ^
SyntaxError: invalid syntax
